--- a/01. PARTIE LEGISLATIVE/Article L2100-4 - 29332228.md
+++ b/01. PARTIE LEGISLATIVE/Article L2100-4 - 29332228.md
@@ -14,12 +14,12 @@ opérationnelle. Le contrat mentionné à l'article L. 2111-10 lui est transmis.
 Selon des modalités fixées par décret en Conseil d'Etat, il adopte une charte du réseau destinée à faciliter les relations
 entre SNCF Réseau et les membres du comité et à favoriser une utilisation optimale du réseau ferré national, dans un souci
 d'efficacité économique et sociale et d'optimisation du service rendu aux utilisateurs. Cette charte et ses modifications
-sont soumises pour avis à l'Autorité de régulation des activités ferroviaires. 
+sont soumises pour avis à l'     Autorité de régulation des activités ferroviaires et routières . 
 
-Sans préjudice des compétences exercées par l'Autorité de régulation des activités ferroviaires en application des articles
-L. 2134-1 à L. 2134-3 ou des voies de recours prévues par les lois, règlements et contrats, le comité des opérateurs du
-réseau peut être saisi, à fin de règlement amiable, des différends afférents à l'interprétation et à l'application de la
-charte du réseau mentionnée au quatrième alinéa du présent article. 
+Sans préjudice des compétences exercées par l'     Autorité de régulation des activités ferroviaires et routières  en
+application des articles L. 2134-1 à L. 2134-3 ou des voies de recours prévues par les lois, règlements et contrats, le
+comité des opérateurs du réseau peut être saisi, à fin de règlement amiable, des différends afférents à l'interprétation et à
+l'application de la charte du réseau mentionnée au quatrième alinéa du présent article. 
 
 Le comité se réunit au moins quatre fois par an et à l'initiative de SNCF Réseau ou d'un tiers au moins de ses membres.
 
@@ -33,10 +33,10 @@ Le comité se réunit au moins quatre fois par an et à l'initiative de SNCF Ré
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 1
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
 	  - Code des transports - art. L2111-1
-	  - Code des transports - art. L2111-10 (V)
-	  - Code des transports - art. L2134-1 (V)
+	  - Code des transports - art. L2111-10
+	  - Code des transports - art. L2134-1
