--- a/01. PARTIE LEGISLATIVE/Article L2111-10 - 23084714.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-10 - 23084714.md
@@ -1,15 +1,15 @@
 # Article L2111-10
 
 SNCF Réseau conclut avec l'Etat un contrat d'une durée de dix ans, actualisé tous les trois ans pour une durée de dix ans. Le
-projet de contrat et les projets d'actualisation sont soumis pour avis à l'Autorité de régulation des activités
-ferroviaires. 
+projet de contrat et les projets d'actualisation sont soumis pour avis à l'     Autorité de régulation des activités
+ferroviaires et routières . 
 
-Le projet de contrat et les projets d'actualisation ainsi que l'avis de l'Autorité de régulation des activités ferroviaires
-sont transmis au Parlement. 
+Le projet de contrat et les projets d'actualisation ainsi que l'avis de l'     Autorité de régulation des activités
+ferroviaires et routières  sont transmis au Parlement. 
 
 SNCF Réseau rend compte chaque année, dans son rapport d'activité, de la mise en œuvre du contrat mentionné au premier
-alinéa. Ce rapport est soumis à l'avis de l'Autorité de régulation des activités ferroviaires. Le rapport d'activité et
-l'avis de l'autorité sont adressés au Parlement et au Haut Comité du système de transport ferroviaire. 
+alinéa. Ce rapport est soumis à l'avis de l'     Autorité de régulation des activités ferroviaires et routières . Le rapport
+d'activité et l'avis de l'autorité sont adressés au Parlement et au Haut Comité du système de transport ferroviaire. 
 
 Le Haut Comité du système de transport ferroviaire délibère annuellement sur des recommandations d'actions et des
 propositions d'évolution du contrat. Le résultat de ses délibérations est rendu public et transmis au Parlement avec le
@@ -42,11 +42,12 @@ trajectoire à respecter du rapport entre la dette nette de SNCF Réseau et sa m
 de renégociation de celles-ci lorsque des circonstances exceptionnelles ont une incidence sur la disponibilité des
 financements publics ou sur la trajectoire financière de SNCF Réseau. 
 
-L'avis de l'Autorité de régulation des activités ferroviaires porte notamment sur le niveau et la soutenabilité de
-l'évolution de la tarification de l'infrastructure pour le marché du transport ferroviaire et sur l'adéquation du niveau des
-recettes prévisionnelles avec celui des dépenses projetées, au regard des 1°, 2° et c du 3° du présent article, tant en
-matière d'entretien et de renouvellement que de développement, de façon à atteindre l'objectif de couverture du coût complet
-dans un délai de dix ans à compter de l'entrée en vigueur du premier contrat entre SNCF Réseau et l'Etat. 
+L'avis de l'     Autorité de régulation des activités ferroviaires et routières  porte notamment sur le niveau et la
+soutenabilité de l'évolution de la tarification de l'infrastructure pour le marché du transport ferroviaire et sur
+l'adéquation du niveau des recettes prévisionnelles avec celui des dépenses projetées, au regard des 1°, 2° et c du 3° du
+présent article, tant en matière d'entretien et de renouvellement que de développement, de façon à atteindre l'objectif de
+couverture du coût complet dans un délai de dix ans à compter de l'entrée en vigueur du premier contrat entre SNCF Réseau et
+l'Etat. 
 
 Pour l'application du présent article, le coût complet correspond, pour un état donné du réseau, à l'ensemble des charges de
 toute nature supportées par SNCF Réseau liées à la construction, à l'exploitation, à la maintenance et à l'aménagement de
@@ -61,6 +62,10 @@ contrat. Il aligne la période du plan d'entreprise avec celle d'exécution du c
 Les conditions d'application du présent article sont fixées par un décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
+
+	**Cite**:
+
+	  - Loi n°85-704 du 12 juillet 1985
 
 	**Codifié par**:
 
@@ -88,8 +93,4 @@ Les conditions d'application du présent article sont fixées par un décret en 
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 2
-
-	**Cite**:
-
-	  - Code des transports - art. L2122-7-1 (V)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
