--- a/01. PARTIE LEGISLATIVE/Article L2111-10-1 - 29332330.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-10-1 - 29332330.md
@@ -21,11 +21,11 @@ soutenable du financement du système de transport ferroviaire entre gestionnair
 ferroviaires, en prenant en compte les conditions de la concurrence intermodale. 
 
 Pour chaque projet d'investissement dont la valeur excède un seuil fixé par décret, l'Autorité de régulation des activités
-ferroviaires émet un avis motivé sur le montant global des concours financiers devant être apportés à SNCF Réseau et sur la
-part contributive de SNCF Réseau, au regard notamment des stipulations du contrat mentionné au premier alinéa de l'article L.
-2111-10. Cet avis porte notamment sur la pertinence des prévisions de recettes nouvelles, en particulier au regard de leur
-soutenabilité pour les entreprises ferroviaires, ainsi que sur l'adéquation du niveau de ces recettes avec celui des dépenses
-d'investissement projetées.
+ferroviaires et routières  émet un avis motivé sur le montant global des concours financiers devant être apportés à SNCF
+Réseau et sur la part contributive de SNCF Réseau, au regard notamment des stipulations du contrat mentionné au premier
+alinéa de l'article L. 2111-10. Cet avis porte notamment sur la pertinence des prévisions de recettes nouvelles, en
+particulier au regard de leur soutenabilité pour les entreprises ferroviaires, ainsi que sur l'adéquation du niveau de ces
+recettes avec celui des dépenses d'investissement projetées.
 
 Les modalités d'application du présent article, notamment le mode de calcul des éléments du ratio mentionné au 2° et son
 niveau plafond, qui ne peut excéder 18, sont définies par décret.
@@ -43,7 +43,7 @@ niveau plafond, qui ne peut excéder 18, sont définies par décret.
 
 	**Modifié par**:
 
-	  - Loi n°2015-990 du 6 août 2015 - art. 193
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
