--- a/01. PARTIE LEGISLATIVE/Article L2111-16-1 - 29332668.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-16-1 - 29332668.md
@@ -2,8 +2,8 @@
 
 Sont considérés comme dirigeants de SNCF Réseau pour l'application du présent article le président du conseil
 d'administration et les responsables de la direction générale. La liste des emplois de dirigeant est arrêtée par le conseil
-d'administration et communiquée à l'Autorité de régulation des activités ferroviaires, dans des conditions fixées par voie
-réglementaire. 
+d'administration et communiquée à l'     Autorité de régulation des activités ferroviaires et routières , dans des conditions
+fixées par voie réglementaire. 
 
 Pendant leur mandat, les dirigeants de SNCF Réseau ne peuvent exercer d'activités, ni avoir de responsabilités
 professionnelles dans une entreprise exerçant, directement ou par l'intermédiaire d'une de ses filiales, une activité
@@ -23,10 +23,10 @@ du conseil d'administration de SNCF Réseau fait exception au deuxième alinéa 
 	  - Décret n°2015-137 du 10 février 2015 - art. 25 (V)
 	  - Code des transports - art. L2111-16 (VD)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 6
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L2102-9 (VD)
+	  - Code des transports - art. L2102-9
