--- a/01. PARTIE LEGISLATIVE/Article L2111-25 - 23084670.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-25 - 23084670.md
@@ -10,7 +10,7 @@ complet du réseau n'est pas couvert par l'ensemble de ses ressources, SNCF Rés
 productivité qu'il réalise. 
 
 Tout projet de modification des modalités de fixation de ces redevances fait l'objet d'une consultation et d'un avis de la ou
-des régions concernées et de l'Autorité de régulation des activités ferroviaires. 
+des régions concernées et de l'     Autorité de régulation des activités ferroviaires et routières . 
 
 Les règles de détermination de ces redevances sont fixées par décret en Conseil d'Etat.
 
@@ -22,14 +22,14 @@ Les règles de détermination de ces redevances sont fixées par décret en Cons
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 2
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L2111-24 (V)
+	  - Code des transports - art. L2111-24
 
 	**Cité par**:
 
 	  - Code des transports - art. L2122-4-2 (V)
-	  - Code des transports - art. L2133-5 (V)
+	  - Code des transports - art. L2133-5 (VD)
 	  - Code des transports - art. R5352-4 (Ab)
