--- a/01. PARTIE LEGISLATIVE/Article L2121-12 - 23084606.md
+++ b/01. PARTIE LEGISLATIVE/Article L2121-12 - 23084606.md
@@ -2,12 +2,12 @@
 
 Les entreprises ferroviaires exploitant des services de transport international de voyageurs peuvent, à cette occasion,
 assurer des dessertes intérieures à condition que l'objet principal du service exploité par l'entreprise ferroviaire soit le
-transport de voyageurs entre des gares situées dans des Etats membres de l'Union européenne différents. L'Autorité de
-régulation des activités ferroviaires vérifie l'objet principal du service. 
+transport de voyageurs entre des gares situées dans des Etats membres de l'Union européenne différents. L'     Autorité de
+régulation des activités ferroviaires et routières  vérifie l'objet principal du service. 
 
 Toute autorité organisatrice de transport ferroviaire compétente peut limiter ou, le cas échéant, interdire ces dessertes
-intérieures, sous réserve que l'Autorité de régulation des activités ferroviaires ait, par une décision motivée, estimé que
-ces dessertes compromettent l'équilibre économique d'un contrat de service public. 
+intérieures, sous réserve que l'     Autorité de régulation des activités ferroviaires et routières  ait, par une décision
+motivée, estimé que ces dessertes compromettent l'équilibre économique d'un contrat de service public. 
 
 Les conditions d'application du présent article sont fixées par décret en Conseil d'Etat.
 
@@ -22,10 +22,10 @@ Les conditions d'application du présent article sont fixées par décret en Con
 	  - Décret n°2003-194 du 7 mars 2003 - art. 2 (V)
 	  - Décret n°2015-1167 du 22 septembre 2015 (V)
 	  - Code des transports - art. L1221-3 (V)
-	  - Code des transports - art. L2133-1 (V)
+	  - Code des transports - art. L2133-1 (VD)
 	  - Code des transports - art. L2141-1 (VD)
 	  - Code général des impôts, CGI. - art. 302 bis ZC (VD)
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 10
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
