--- a/01. PARTIE LEGISLATIVE/Article L2122-4-5 - 30892830.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-4-5 - 30892830.md
@@ -6,7 +6,7 @@ l'interdiction de divulgation des informations mentionnées à l'article L. 2122
 Il établit, à destination de son personnel, un plan de gestion des informations confidentielles qui précise la liste des
 informations mentionnées à l'article L. 2122-4-4 détenues par les services du gestionnaire d'infrastructure responsables de
 la répartition des capacités et de la tarification de l'infrastructure ainsi que leurs conditions d'utilisation et de
-communication. Ce plan est pris sur avis conforme de l'Autorité de régulation des activités ferroviaires.
+communication. Ce plan est pris sur avis conforme de l'     Autorité de régulation des activités ferroviaires et routières .
 
 **Liens relatifs à cet article**
 
@@ -14,10 +14,6 @@ communication. Ce plan est pris sur avis conforme de l'Autorité de régulation 
 
 	  - Décret n°2015-139 du 10 février 2015 - art. 5 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
-
-	**Anciens textes**:
-
-	  - Code des transports - art. L2122-4-2 (T)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
