--- a/01. PARTIE LEGISLATIVE/Article L2123-3-3 - 30893364.md
+++ b/01. PARTIE LEGISLATIVE/Article L2123-3-3 - 30893364.md
@@ -1,7 +1,7 @@
 # Article L2123-3-3
 
 Les demandes d'accès aux installations de service et aux services mentionnés à l'article L. 2123-1 sont traitées dans un
-délai raisonnable, fixé par l'Autorité de régulation des activités ferroviaires.
+délai raisonnable, fixé par l'     Autorité de régulation des activités ferroviaires et routières .
 
 **Liens relatifs à cet article**
 
@@ -10,10 +10,6 @@ délai raisonnable, fixé par l'Autorité de régulation des activités ferrovia
 	  - Décret n°2012-70 du 20 janvier 2012 - art. 2 (V)
 	  - Décret n°2016-1468 du 28 octobre 2016 - art. 1
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 4
-
-	**Cite**:
-
-	  - Code des transports - art. L2123-1 (V)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
