--- a/01. PARTIE LEGISLATIVE/Article L2123-3-4 - 30893374.md
+++ b/01. PARTIE LEGISLATIVE/Article L2123-3-4 - 30893374.md
@@ -4,8 +4,9 @@ En cas de conflit entre différentes demandes d'accès à une installation de se
 mieux à toutes les demandes. 
 
 En cas d'impossibilité de satisfaire l'ensemble des besoins avérés d'accès à l'installation concernée et en l'absence
-d'alternative viable, le candidat peut demander à l'Autorité de régulation des activités ferroviaires de prendre les mesures
-permettant de concilier au mieux les demandes d'accès, dans le cadre d'une procédure définie par celle-ci.
+d'alternative viable, le candidat peut demander à l'     Autorité de régulation des activités ferroviaires et routières  de
+prendre les mesures permettant de concilier au mieux les demandes d'accès, dans le cadre d'une procédure définie par celle-
+ci.
 
 **Liens relatifs à cet article**
 
@@ -14,6 +15,6 @@ permettant de concilier au mieux les demandes d'accès, dans le cadre d'une proc
 	  - Décret n°2012-70 du 20 janvier 2012 - art. 2 (V)
 	  - Décret n°2016-1468 du 28 octobre 2016 - art. 1
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 4
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
