--- a/01. PARTIE LEGISLATIVE/Article L2131-3 - 23084533.md
+++ b/01. PARTIE LEGISLATIVE/Article L2131-3 - 23084533.md
@@ -1,7 +1,7 @@
 # Article L2131-3
 
-L'Autorité de régulation des activités ferroviaires veille en particulier à ce que les conditions d'accès au réseau
-ferroviaire par les entreprises ferroviaires n'entravent pas le développement de la concurrence.
+L'     Autorité de régulation des activités ferroviaires et routières  veille en particulier à ce que les conditions d'accès
+au réseau ferroviaire par les entreprises ferroviaires n'entravent pas le développement de la concurrence. 
 
 Elle assure une mission générale d'observation des conditions d'accès au réseau ferroviaire et peut, à ce titre, après avoir
 procédé à toute consultation qu'elle estime utile des acteurs du secteur des transports ferroviaires, formuler et publier
@@ -9,14 +9,14 @@ toute recommandation.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 11 (Ab), alinéas 2 et 3
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cité par**:
 
 	  - Code des transports - art. L2131-7 (T)
-	  - Code des transports - art. L2133-2 (V)
+	  - Code des transports - art. L2133-2 (VD)
 
 	**Codifié par**:
 
