--- a/01. PARTIE LEGISLATIVE/Article L2131-5 - 23084529.md
+++ b/01. PARTIE LEGISLATIVE/Article L2131-5 - 23084529.md
@@ -1,19 +1,27 @@
 # Article L2131-5
 
-L'Autorité de régulation des activités ferroviaires est compétente pour le réseau ferroviaire défini à l'article L. 2122-1,
-sous réserve des pouvoirs dévolus à la Commission intergouvernementale instituée par le traité entre la République française
-et le Royaume-Uni de Grande-Bretagne et d'Irlande du Nord, concernant la construction et l'exploitation par des sociétés
-privées concessionnaires d'une liaison fixe trans-Manche, signé le 12 février 1986.
+L'Autorité de régulation des activités ferroviaires et routières  est compétente pour le réseau ferroviaire défini à
+l'article L. 2122-1, sous réserve des pouvoirs dévolus à la Commission intergouvernementale instituée par le traité entre la
+République française et le Royaume-Uni de Grande-Bretagne et d'Irlande du Nord, concernant la construction et l'exploitation
+par des sociétés privées concessionnaires d'une liaison fixe trans-Manche, signé le 12 février 1986.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 11 (Ab), alinéa 5
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Liens**:
+
+	  - TRANSFERE: Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
 
 	**Cite**:
 
-	  - Code des transports - art. L2122-1 (V)
+	  - Code des transports - art. L2122-1
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L2132-1 (M)
 
 	**Codifié par**:
 
