--- a/01. PARTIE LEGISLATIVE/Article L2131-6-1 - 30893694.md
+++ b/01. PARTIE LEGISLATIVE/Article L2131-6-1 - 30893694.md
@@ -1,10 +1,10 @@
 # Article L2131-6-1
 
-Aux fins de coordonner leurs processus décisionnels et de s'apporter une assistance mutuelle, l'Autorité de régulation des
-activités ferroviaires définit, avec les organismes de contrôle, au sens de la directive 2012/34/ UE du Parlement européen et
-du Conseil du 21 novembre 2012 établissant un espace ferroviaire unique européen (refonte), des autres Etats membres de
-l'Union européenne, les règles de coopération en matière de contrôle de l'accès au réseau, d'organisation des enquêtes et de
-règlement des différends. 
+Aux fins de coordonner leurs processus décisionnels et de s'apporter une assistance mutuelle, l'     Autorité de régulation
+des activités ferroviaires et routières  définit, avec les organismes de contrôle, au sens de la directive 2012/34/ UE du
+Parlement européen et du Conseil du 21 novembre 2012 établissant un espace ferroviaire unique européen (refonte), des autres
+Etats membres de l'Union européenne, les règles de coopération en matière de contrôle de l'accès au réseau, d'organisation
+des enquêtes et de règlement des différends. 
 
 En particulier, elle échange avec ces organismes les informations utiles à l'accomplissement de leurs missions. Les
 informations échangées portent notamment sur les principes et pratiques décisionnels, sur les principaux aspects des
@@ -23,16 +23,18 @@ transport ferroviaire international. Elle précise que ces informations ne peuve
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Liens**:
+
+	  - TRANSFERE: Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
 
 	**Cité par**:
 
 	  - Code des transports - art. L2122-4-6 (VT)
 
-	**Cite**:
+	**Nouveaux textes**:
 
-	  - Code des transports - art. L2133-1 (VT)
-	  - Code des transports - art. L2134-2 (VD)
-	  - Code des transports - art. L2135-1 (VT)
+	  - Code des transports - art. L2132-3 (V)
