--- a/01. PARTIE LEGISLATIVE/Article L2131-6-2 - 30893701.md
+++ b/01. PARTIE LEGISLATIVE/Article L2131-6-2 - 30893701.md
@@ -5,11 +5,19 @@ européenne d'une demande d'examen des mesures prises par un Etat membre de l'Un
 directive 2012/34/ UE du Parlement européen et du Conseil du 21 novembre 2012 établissant un espace ferroviaire unique
 européen (refonte), en application de l'article 61 de celle-ci, au sujet des conditions d'accès à l'infrastructure et aux
 services ferroviaires, des licences des entreprises ferroviaires, des redevances d'infrastructure et de la répartition des
-capacités, dans un délai de douze mois à compter de l'adoption de ces mesures, l'Autorité de régulation des activités
-ferroviaires peut saisir la Commission d'une telle demande dans le même délai.
+capacités, dans un délai de douze mois à compter de l'adoption de ces mesures, l'     Autorité de régulation des activités
+ferroviaires et routières  peut saisir la Commission d'une telle demande dans le même délai.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Liens**:
+
+	  - TRANSFERE: Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L2132-4 (V)
