--- a/01. PARTIE LEGISLATIVE/Article L2132-13 - 23084484.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-13 - 23084484.md
@@ -2,7 +2,7 @@
 
 Il est institué, à compter du 1er janvier 2009, un droit fixe dû par les entreprises ferroviaires qui utilisent le réseau
 ferroviaire au sens de l'article L. 2122-1. Le montant de ce droit est fixé par les ministres chargés des transports et du
-budget sur proposition de l'Autorité de régulation des activités ferroviaires. 
+budget sur proposition de l'     Autorité de régulation des activités ferroviaires et routières . 
 
 Ce droit comprend, selon le cas : 
 
@@ -13,14 +13,14 @@ du réseau ferré national mentionné à l'article L. 2111-9, dans la limite de 
 0,10 € par kilomètre parcouru. 
 
 Ce droit est déclaré et acquitté par les personnes précitées, dans les mêmes conditions que celles prévues pour le droit de
-sécurité institué par l'article L. 2221-6, auprès du comptable public de l'Autorité de régulation des activités
-ferroviaires. 
+sécurité institué par l'article L. 2221-6, auprès du comptable public de l'     Autorité de régulation des activités
+ferroviaires et routières . 
 
 Ce droit est constaté et recouvré dans les mêmes délais et sous les mêmes garanties et sanctions que ceux applicables en
 matière de taxes sur le chiffre d'affaires. 
 
-Le produit de ce droit est affecté à l'Autorité de régulation des activités ferroviaires dans la limite du plafond prévu au I
-de l'article 46 de la loi n° 2011-1977 du 28 décembre 2011 de finances pour 2012.
+Le produit de ce droit est affecté à l'     Autorité de régulation des activités ferroviaires et routières  dans la limite du
+plafond prévu au I de l'article 46 de la loi n° 2011-1977 du 28 décembre 2011 de finances pour 2012.
 
 **Liens relatifs à cet article**
 
@@ -28,17 +28,21 @@ de l'article 46 de la loi n° 2011-1977 du 28 décembre 2011 de finances pour 20
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
-	**Cite**:
+	**Modifié par**:
 
 	  - Loi n°2011-1977 du 28 décembre 2011 - art. 46 (VT)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
+
+	**Cite**:
+
 	  - Code des transports - art. L2111-9
 	  - Code des transports - art. L2122-1
 	  - Code des transports - art. L2221-6
 
-	**Modifié par**:
-
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
-
 	**Cité par**:
 
-	  - Code des transports - art. L2132-12 (V)
+	  - Code des transports - art. L2132-12 (M)
