--- a/01. PARTIE LEGISLATIVE/Article L2132-6 - 23084509.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-6 - 23084509.md
@@ -1,7 +1,7 @@
 # Article L2132-6
 
-Le président de l'Autorité de régulation des activités ferroviaires prend les mesures appropriées pour assurer le respect des
-obligations définies à l'article L. 2132-8.
+Le président de l'     Autorité de régulation des activités ferroviaires et routières  prend les mesures appropriées pour
+assurer le respect des obligations définies à l'article L. 2132-8.
 
 **Liens relatifs à cet article**
 
@@ -11,13 +11,13 @@ obligations définies à l'article L. 2132-8.
 	  - Décret n°2010-1023 du 1 septembre 2010 - art. 1-1 (V)
 	  - Décret n°2016-1468 du 28 octobre 2016 - art. 5
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 13 (Ab), alinéa 9
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L2132-8 (V)
+	  - Code des transports - art. L2132-8
 
 	**Codifié par**:
 
