--- a/01. PARTIE LEGISLATIVE/Article L2133-1 - 23084480.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-1 - 23084480.md
@@ -1,17 +1,17 @@
 # Article L2133-1
 
-Lorsqu'une entreprise ferroviaire effectue des dessertes intérieures à l'occasion d'un service international de voyageurs,
-l'Autorité de régulation des activités ferroviaires vérifie, à la demande de l'autorité administrative compétente ou des
-entreprises ferroviaires concernées, que le transport de voyageurs entre des gares situées dans des Etats membres différents
-constitue l'objet principal du service conformément à l'article L. 2121-12. Elle se prononce également sur l'existence
-éventuelle d'une atteinte à l'équilibre économique d'un contrat de service public par ces dessertes intérieures, à la demande
-de l'autorité administrative compétente, de l'autorité qui a attribué ledit contrat, du gestionnaire d'infrastructure ou de
-l'entreprise ferroviaire qui exécute le contrat, afin de permettre à l'autorité organisatrice compétente de limiter ou, le
-cas échéant, d'interdire ces dessertes intérieures, conformément à l'article L. 2121-12.
+Lorsqu'une entreprise ferroviaire effectue des dessertes intérieures à l'occasion d'un service international de voyageurs, l'
+Autorité de régulation des activités ferroviaires et routières  vérifie, à la demande de l'autorité administrative compétente
+ou des entreprises ferroviaires concernées, que le transport de voyageurs entre des gares situées dans des Etats membres
+différents constitue l'objet principal du service conformément à l'article L. 2121-12. Elle se prononce également sur
+l'existence éventuelle d'une atteinte à l'équilibre économique d'un contrat de service public par ces dessertes intérieures,
+à la demande de l'autorité administrative compétente, de l'autorité qui a attribué ledit contrat, du gestionnaire
+d'infrastructure ou de l'entreprise ferroviaire qui exécute le contrat, afin de permettre à l'autorité organisatrice
+compétente de limiter ou, le cas échéant, d'interdire ces dessertes intérieures, conformément à l'article L. 2121-12. 
 
-Les décisions de l'Autorité de régulation des activités ferroviaires sont prises dans un délai de six semaines à compter de
-la réception de toutes les informations utiles à l'instruction et notifiés au demandeur. Elles sont susceptibles de recours
-devant le Conseil d'Etat.
+Les décisions de l'     Autorité de régulation des activités ferroviaires et routières  sont prises dans un délai de six
+semaines à compter de la réception de toutes les informations utiles à l'instruction et notifiés au demandeur. Elles sont
+susceptibles de recours devant le Conseil d'Etat.
 
 **Liens relatifs à cet article**
 
@@ -21,7 +21,7 @@ devant le Conseil d'Etat.
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cité par**:
 
@@ -30,4 +30,4 @@ devant le Conseil d'Etat.
 
 	**Cite**:
 
-	  - Code des transports - art. L2121-12 (V)
+	  - Code des transports - art. L2121-12 (VD)
