--- a/01. PARTIE LEGISLATIVE/Article L2133-1-1 - 30893774.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-1-1 - 30893774.md
@@ -1,13 +1,13 @@
 # Article L2133-1-1
 
 Dans le cadre de ses missions de suivi de la situation de la concurrence sur les marchés des services ferroviaires et
-d'observation des conditions d'accès au réseau ferroviaire, l'Autorité de régulation des activités ferroviaires consulte
-chaque année les représentants des usagers et des clients des services de transport ferroviaire afin de connaître et prendre
-en considération leur appréciation des marchés ferroviaires. Elle rend publique ces informations à l'exception de celles qui
-portent atteinte au secret des affaires.
+d'observation des conditions d'accès au réseau ferroviaire, l'Autorité de régulation des activités ferroviaires et routières
+consulte chaque année les représentants des usagers et des clients des services de transport ferroviaire afin de connaître et
+prendre en considération leur appréciation des marchés ferroviaires. Elle rend publique ces informations à l'exception de
+celles qui portent atteinte au secret des affaires.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
