--- a/01. PARTIE LEGISLATIVE/Article L2133-10 - 29332779.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-10 - 29332779.md
@@ -1,14 +1,18 @@
 # Article L2133-10
 
-L'Autorité de régulation des activités ferroviaires veille à ce que les décisions de la SNCF respectent l'indépendance de
-SNCF Réseau dans l'exercice des fonctions définies au 1° de l'article L. 2111-9.
+L'Autorité de régulation des activités ferroviaires et routières veille à ce que les décisions de la SNCF respectent
+l'indépendance de SNCF Réseau dans l'exercice des fonctions définies au 1° de l'article L. 2111-9.
 
 **Liens relatifs à cet article**
 
 	**Créé par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L2111-9 (VD)
+	  - Code des transports - art. L2111-9
