--- a/01. PARTIE LEGISLATIVE/Article L2133-5 - 23084472.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-5 - 23084472.md
@@ -1,7 +1,7 @@
 # Article L2133-5
 
-I.-L'Autorité de régulation des activités ferroviaires émet un avis conforme sur la fixation des redevances d'infrastructure
-liées à l'utilisation du réseau ferré national au regard : 
+I.-L'Autorité de régulation des activités ferroviaires et routières émet un avis conforme sur la fixation des redevances
+d'infrastructure liées à l'utilisation du réseau ferré national au regard : 
 
 1° Des principes et des règles de tarification applicables sur ce réseau, prévus à l'article L. 2111-25 ; 
 
@@ -12,16 +12,16 @@ position concurrentielle du transport ferroviaire sur le marché des transports 
 
 Lorsque, notamment en application d'une convention de délégation de service public prévue aux articles L. 2111-11 et L.
 2111-12, les redevances sont fixées conformément à des dispositions tarifaires sur l'application desquelles l'Autorité de
-régulation des activités ferroviaires s'est déjà prononcée dans les conditions et selon les modalités prévues aux quatre
-premiers alinéas, l'avis visé au premier alinéa est réputé obtenu. 
+régulation des activités ferroviaires et routières s'est déjà prononcée dans les conditions et selon les modalités prévues
+aux quatre premiers alinéas, l'avis visé au premier alinéa est réputé obtenu. 
 
-II.-Sauf dans le cas prévu à l'article L. 5352-2, l'Autorité de régulation des activités ferroviaires émet un avis conforme
-sur la fixation des redevances relatives à l'accès aux gares de voyageurs et aux autres installations de service ainsi qu'aux
-prestations régulées qui y sont fournies, au regard des principes et des règles de tarification applicables à ces
-installations. 
+II.-Sauf dans le cas prévu à l'article L. 5352-2, l'Autorité de régulation des activités ferroviaires et routières émet un
+avis conforme sur la fixation des redevances relatives à l'accès aux gares de voyageurs et aux autres installations de
+service ainsi qu'aux prestations régulées qui y sont fournies, au regard des principes et des règles de tarification
+applicables à ces installations. 
 
-Lorsque les redevances sont fixées pour une période pluriannuelle, l'Autorité de régulation des activités ferroviaires émet
-son avis pour la période concernée et en cas de modifications.
+Lorsque les redevances sont fixées pour une période pluriannuelle, l'Autorité de régulation des activités ferroviaires et
+routières émet son avis pour la période concernée et en cas de modifications.
 
 **Liens relatifs à cet article**
 
@@ -39,10 +39,11 @@ son avis pour la période concernée et en cas de modifications.
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
 	  - Code des transports - art. L2111-10
 	  - Code des transports - art. L2111-11
-	  - Code des transports - art. L2111-25
+	  - Code des transports - art. L2111-25 (VD)
