--- a/01. PARTIE LEGISLATIVE/Article L2133-5-1 - 29332766.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-5-1 - 29332766.md
@@ -1,12 +1,12 @@
 # Article L2133-5-1
 
 Préalablement à l'examen du budget de SNCF Réseau par le conseil d'administration de celui-ci, l'Autorité de régulation des
-activités ferroviaires émet un avis motivé sur ce projet. Cet avis porte notamment sur le respect de la trajectoire
-financière définie par le contrat conclu entre l'Etat et SNCF Réseau mentionné à l'article L. 2111-10. 
+activités ferroviaires et routières émet un avis motivé sur ce projet. Cet avis porte notamment sur le respect de la
+trajectoire financière définie par le contrat conclu entre l'Etat et SNCF Réseau mentionné à l'article L. 2111-10. 
 
-Si l'Autorité de régulation des activités ferroviaires constate que SNCF Réseau a manqué à ses obligations contractuelles ou
-que la trajectoire financière s'est écartée de celle prévue au contrat, elle en analyse les causes et peut recommander au
-conseil d'administration de SNCF Réseau de mettre en œuvre des mesures correctives appropriées.
+Si l'Autorité de régulation des activités ferroviaires et routières constate que SNCF Réseau a manqué à ses obligations
+contractuelles ou que la trajectoire financière s'est écartée de celle prévue au contrat, elle en analyse les causes et peut
+recommander au conseil d'administration de SNCF Réseau de mettre en œuvre des mesures correctives appropriées.
 
 **Liens relatifs à cet article**
 
@@ -16,7 +16,11 @@ conseil d'administration de SNCF Réseau de mettre en œuvre des mesures correct
 
 	**Créé par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
