--- a/01. PARTIE LEGISLATIVE/Article L2133-5-2 - 30893862.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-5-2 - 30893862.md
@@ -1,8 +1,8 @@
 # Article L2133-5-2
 
-L'Autorité de régulation des activités ferroviaires autorise le gestionnaire d'infrastructure à poursuivre la perception des
-redevances au titre de la rareté sur une infrastructure déclarée saturée dans les conditions prévues au troisième alinéa de
-l'article L. 2122-4-7.
+L'Autorité de régulation des activités ferroviaires et routières autorise le gestionnaire d'infrastructure à poursuivre la
+perception des redevances au titre de la rareté sur une infrastructure déclarée saturée dans les conditions prévues au
+troisième alinéa de l'article L. 2122-4-7.
 
 **Liens relatifs à cet article**
 
@@ -10,10 +10,6 @@ l'article L. 2122-4-7.
 
 	  - Décret n°2003-194 du 7 mars 2003 - art. 33-1 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
-
-	**Cite**:
-
-	  - Code des transports - art. L2122-4-7 (VD)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
