--- a/01. PARTIE LEGISLATIVE/Article L2133-8 - 23084466.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-8 - 23084466.md
@@ -1,14 +1,14 @@
 # Article L2133-8
 
-L'Autorité de régulation des activités ferroviaires est consultée sur les projets de textes réglementaires relatifs à l'accès
-au réseau ferroviaire, à la conception, la réalisation et l'utilisation des infrastructures et des matériels de transport
-ferroviaire.
+L'Autorité de régulation des activités ferroviaires et routières est consultée sur les projets de textes réglementaires
+relatifs à l'accès au réseau ferroviaire, à la conception, la réalisation et l'utilisation des infrastructures et des
+matériels de transport ferroviaire.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 15 (Ab), alinéa 10, paragraphe VIII
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Codifié par**:
 
