--- a/01. PARTIE LEGISLATIVE/Article L2141-3 - 23084378.md
+++ b/01. PARTIE LEGISLATIVE/Article L2141-3 - 23084378.md
@@ -3,21 +3,21 @@
 SNCF Mobilités conclut avec l'Etat un contrat d'une durée de dix ans, actualisé tous les trois ans pour une durée de dix ans.
 Ce contrat détermine notamment les objectifs assignés à l'entreprise en matière de qualité de service, de trajectoire
 financière, de développement du service public ferroviaire et du fret ferroviaire, d'aménagement du territoire et de réponse
-aux besoins de transport de la population et des acteurs économiques.
+aux besoins de transport de la population et des acteurs économiques. 
 
 SNCF Mobilités rend compte chaque année, dans son rapport d'activité, de la mise en œuvre du contrat mentionné au premier
-alinéa du présent article. Ce rapport est adressé au Parlement, à l'Autorité de régulation des activités ferroviaires et au
-Haut Comité du système de transport ferroviaire.
+alinéa du présent article. Ce rapport est adressé au Parlement, à l'Autorité de régulation des activités ferroviaires et
+routières et au Haut Comité du système de transport ferroviaire.
 
 **Liens relatifs à cet article**
+
+	**Cite**:
+
+	  - Loi n°82-653 du 29 juillet 1982
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Modifié par**:
-
-	  - Loi n°2014-872 du 4 août 2014 - art. 14
 
 	**Cité par**:
 
@@ -29,3 +29,7 @@ Haut Comité du système de transport ferroviaire.
 	  - Décret n°2016-327 du 17 mars 2016 - art. 11 (V)
 	  - Code des transports - art. L2100-3 (V)
 	  - Code des transports - art. L2102-5 (VD)
+
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
