--- a/01. PARTIE LEGISLATIVE/Article L3111-21 - 30984958.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-21 - 30984958.md
@@ -5,7 +5,8 @@ Pour l'application de la présente section, sont considérés comme des services
 1° Les services qui ne sont pas intégralement inclus dans le ressort territorial d'une autorité organisatrice de la mobilité,
 au sens de l'article L. 1231-1 ; 
 
-2° Les services exécutés dans la région d'Ile-de-France sur une distance supérieure à un seuil fixé par décret.
+2° Les services exécutés dans la région d'Ile-de-France sur une distance supérieure à un seuil fixé par décret, pris après
+avis de l'Autorité de régulation des activités ferroviaires et routières.
 
 **Liens relatifs à cet article**
 
@@ -15,9 +16,9 @@ au sens de l'article L. 1231-1 ;
 	  - Loi n°2015-990 du 6 août 2015 - art. 18 (V)
 	  - Code des transports - art. D3111-41 (VD)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2015-990 du 6 août 2015 - art. 5 (V)
+	  - Loi n°2015-990 du 6 août 2015 - art. 18 (V)
 
 	**Cite**:
 
