--- a/01. PARTIE LEGISLATIVE/Article L3111-25 - 30984950.md
+++ b/01. PARTIE LEGISLATIVE/Article L3111-25 - 30984950.md
@@ -1,14 +1,15 @@
 # Article L3111-25
 
-Les modalités d'application de la présente section sont précisées par décret en Conseil d'Etat.
+Les modalités d'application de la présente section sont précisées par décret en Conseil d'Etat, pris après avis de l'Autorité
+de régulation des activités ferroviaires et routières.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 18 (V)
 
 	**Cité par**:
 
 	  - Loi n°2015-990 du 6 août 2015 - art. 18 (V)
 	  - Code des transports - art. L3421-2 (V)
-
-	**Créé par**:
-
-	  - Loi n°2015-990 du 6 août 2015 - art. 5 (V)
