--- a/01. PARTIE LEGISLATIVE/Article L2102-5 - 29332273.md
+++ b/01. PARTIE LEGISLATIVE/Article L2102-5 - 29332273.md
@@ -6,19 +6,15 @@ aux articles L. 2111-10 et L. 2141-3, garantit la cohérence des objectifs et de
 ferroviaire. Il détermine les objectifs assignés par l'Etat à l'entreprise et au groupe en termes de qualité de service au
 profit de l'ensemble des entreprises ferroviaires, des autorités organisatrices de transport ferroviaire et des usagers. Il
 consolide les trajectoires financières et le développement durable et humain des contrats prévus aux mêmes articles L.
-2111-10 et L. 2141-3. Le projet de contrat-cadre et les projets d'actualisation sont soumis pour avis à l'Autorité de
-régulation des activités ferroviaires. Le projet de contrat-cadre et les projets d'actualisation ainsi que l'avis de
-l'Autorité de régulation des activités ferroviaires sont transmis au Parlement. 
+2111-10 et L. 2141-3. Le projet de contrat-cadre et les projets d'actualisation sont soumis pour avis à l'     Autorité de
+régulation des activités ferroviaires et routières . Le projet de contrat-cadre et les projets d'actualisation ainsi que
+l'avis de l'     Autorité de régulation des activités ferroviaires et routières  sont transmis au Parlement. 
 
 La SNCF rend compte chaque année, dans son rapport d'activité, de la mise en œuvre du contrat-cadre mentionné au premier
-alinéa du présent article. Ce rapport d'activité est adressé au Parlement, à l'Autorité de régulation des activités
-ferroviaires et au Haut Comité du système de transport ferroviaire.
+alinéa du présent article. Ce rapport d'activité est adressé au Parlement, à l'     Autorité de régulation des activités
+ferroviaires et routières  et au Haut Comité du système de transport ferroviaire.
 
 **Liens relatifs à cet article**
-
-	**Créé par**:
-
-	  - Loi n°2014-872 du 4 août 2014 - art. 1
 
 	**Cité par**:
 
@@ -28,7 +24,11 @@ ferroviaires et au Haut Comité du système de transport ferroviaire.
 	  - Code des transports - art. L2100-3 (V)
 	  - Code des transports - art. L2102-11 (VD)
 
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
 	**Cite**:
 
-	  - Code des transports - art. L2111-10 (VT)
-	  - Code des transports - art. L2141-3 (VT)
+	  - Code des transports - art. L2111-10
+	  - Code des transports - art. L2141-3 (VD)
