--- a/01. PARTIE LEGISLATIVE/Article L2111-16 - 23084696.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-16 - 23084696.md
@@ -3,20 +3,20 @@
 Le président du conseil d'administration de SNCF Réseau dirige l'établissement. 
 
 Avant de transmettre à l'autorité investie du pouvoir de nomination toute proposition de nomination ou de renouvellement en
-qualité de président du conseil d'administration de SNCF Réseau, le conseil de surveillance de la SNCF fait connaître à
-l'Autorité de régulation des activités ferroviaires l'identité de la personne ainsi que les conditions, notamment
+qualité de président du conseil d'administration de SNCF Réseau, le conseil de surveillance de la SNCF fait connaître à l'
+Autorité de régulation des activités ferroviaires et routières  l'identité de la personne ainsi que les conditions, notamment
 financières, devant régir son mandat. 
 
 Avant de transmettre à l'autorité investie du pouvoir de révocation toute proposition de révocation du président du conseil
-d'administration de SNCF Réseau, le conseil de surveillance de la SNCF fait connaître à l'Autorité de régulation des
-activités ferroviaires les motifs de sa proposition. 
+d'administration de SNCF Réseau, le conseil de surveillance de la SNCF fait connaître à l'     Autorité de régulation des
+activités ferroviaires et routières  les motifs de sa proposition. 
 
-L'Autorité de régulation des activités ferroviaires peut, dans un délai et des conditions fixés par voie réglementaire,
-s'opposer à la nomination ou au renouvellement du président du conseil d'administration de SNCF Réseau si elle estime que le
-respect par la personne proposée des conditions fixées à l'article L. 2111-16-1 à compter de sa nomination ou de sa
-reconduction est insuffisamment garanti, ou s'opposer à sa révocation si elle estime que cette révocation est en réalité
-motivée par l'indépendance dont la personne concernée a fait preuve à l'égard des intérêts d'une entreprise exerçant une
-activité d'entreprise ferroviaire.
+L'     Autorité de régulation des activités ferroviaires et routières  peut, dans un délai et des conditions fixés par voie
+réglementaire, s'opposer à la nomination ou au renouvellement du président du conseil d'administration de SNCF Réseau si elle
+estime que le respect par la personne proposée des conditions fixées à l'article L. 2111-16-1 à compter de sa nomination ou
+de sa reconduction est insuffisamment garanti, ou s'opposer à sa révocation si elle estime que cette révocation est en
+réalité motivée par l'indépendance dont la personne concernée a fait preuve à l'égard des intérêts d'une entreprise exerçant
+une activité d'entreprise ferroviaire.
 
 **Liens relatifs à cet article**
 
@@ -26,7 +26,7 @@ activité d'entreprise ferroviaire.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 6
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cité par**:
 
@@ -35,4 +35,4 @@ activité d'entreprise ferroviaire.
 
 	**Cite**:
 
-	  - Code des transports - art. L2111-16-1 (VD)
+	  - Code des transports - art. L2111-16-1
