--- a/01. PARTIE LEGISLATIVE/Article L2111-16-4 - 29332665.md
+++ b/01. PARTIE LEGISLATIVE/Article L2111-16-4 - 29332665.md
@@ -2,7 +2,7 @@
 
 SNCF Réseau prend des mesures d'organisation interne pour prévenir les risques de pratiques discriminatoires entre
 entreprises ferroviaires et pour assurer le respect des obligations découlant des règles d'impartialité énoncées à la
-présente section. L'Autorité de régulation des activités ferroviaires rend un avis sur ces mesures.
+présente section. L'     Autorité de régulation des activités ferroviaires et routières  rend un avis sur ces mesures.
 
 **Liens relatifs à cet article**
 
@@ -10,6 +10,6 @@ présente section. L'Autorité de régulation des activités ferroviaires rend u
 
 	  - Décret n°97-444 du 5 mai 1997 - art. 32 (VD)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 6
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
