--- a/01. PARTIE LEGISLATIVE/Article L2122-4-6 - 30892862.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-4-6 - 30892862.md
@@ -11,10 +11,10 @@ répartition et de tarification de l'infrastructure concernant les services ferr
 règles nationales relatives à l'accès au réseau ferroviaire. 
 
 Ils rendent publics les principaux termes de cette coopération dont ils informent régulièrement le ministre chargé des
-transports, l'Autorité de régulation des activités ferroviaires et la Commission européenne. Ils invitent la Commission
-européenne, en qualité d'observateur, à leurs principales réunions de coopération. Ils transmettent à l'Autorité de
-régulation des activités ferroviaires, à sa demande, les informations nécessaires à la réalisation des missions mentionnées
-au quatrième alinéa de l'article L. 2131-6-1.
+transports, l'     Autorité de régulation des activités ferroviaires et routières  et la Commission européenne. Ils invitent
+la Commission européenne, en qualité d'observateur, à leurs principales réunions de coopération. Ils transmettent à l'
+Autorité de régulation des activités ferroviaires et routières , à sa demande, les informations nécessaires à la réalisation
+des missions mentionnées au quatrième alinéa de l'article L. 2131-6-1.
 
 **Liens relatifs à cet article**
 
@@ -23,10 +23,6 @@ au quatrième alinéa de l'article L. 2131-6-1.
 	  - Décret n°2003-194 du 7 mars 2003 - art. 17 (V)
 	  - Code des transports - art. L2122-5 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
-
-	**Cite**:
-
-	  - Code des transports - art. L2131-6-1 (VD)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
