--- a/01. PARTIE LEGISLATIVE/Article L2122-4-7 - 30892869.md
+++ b/01. PARTIE LEGISLATIVE/Article L2122-4-7 - 30892869.md
@@ -6,10 +6,10 @@ de renforcement des capacités.
 En l'absence d'un tel plan ou en cas de retard à le mettre en œuvre, il cesse de percevoir toute redevance au titre de la
 rareté des capacités. 
 
-Toutefois, si l'Autorité de régulation des activités ferroviaires estime que le gestionnaire d'infrastructure apporte la
-preuve que le plan de renforcement des capacités ne peut être mis en œuvre pour des raisons échappant à son contrôle ou que
-les options qui s'offrent à lui ne sont pas viables économiquement ou financièrement, elle peut autoriser celui-ci à
-continuer de percevoir des redevances au titre de la rareté des capacités.
+Toutefois, si l'     Autorité de régulation des activités ferroviaires et routières  estime que le gestionnaire
+d'infrastructure apporte la preuve que le plan de renforcement des capacités ne peut être mis en œuvre pour des raisons
+échappant à son contrôle ou que les options qui s'offrent à lui ne sont pas viables économiquement ou financièrement, elle
+peut autoriser celui-ci à continuer de percevoir des redevances au titre de la rareté des capacités.
 
 **Liens relatifs à cet article**
 
@@ -18,6 +18,6 @@ continuer de percevoir des redevances au titre de la rareté des capacités.
 	  - Décret n°2003-194 du 7 mars 2003 - art. 33-1 (V)
 	  - Code des transports - art. L2133-5-2 (VT)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 3
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
