--- a/01. PARTIE LEGISLATIVE/Article L2131-1 - 23084537.md
+++ b/01. PARTIE LEGISLATIVE/Article L2131-1 - 23084537.md
@@ -1,11 +1,11 @@
 # Article L2131-1
 
-L'Autorité de régulation des activités ferroviaires est une autorité publique indépendante, dotée de la personnalité morale.
-Elle concourt au suivi et au bon fonctionnement, dans ses dimensions techniques, économiques et financières, du système de
-transport ferroviaire national, notamment du service public et des activités concurrentielles, au bénéfice des usagers et
-clients des services de transport ferroviaire. Elle exerce ses missions en veillant au respect de la loi n° 2010-788 du 12
-juillet 2010 portant engagement national pour l'environnement, notamment des objectifs et dispositions visant à favoriser le
-développement des modes alternatifs à la route pour le transport de marchandises. 
+L'     Autorité de régulation des activités ferroviaires et routières  est une autorité publique indépendante, dotée de la
+personnalité morale. Elle concourt au suivi et au bon fonctionnement, dans ses dimensions techniques, économiques et
+financières, du système de transport ferroviaire national, notamment du service public et des activités concurrentielles, au
+bénéfice des usagers et clients des services de transport ferroviaire. Elle exerce ses missions en veillant au respect de la
+loi n° 2010-788 du 12 juillet 2010 portant engagement national pour l'environnement, notamment des objectifs et dispositions
+visant à favoriser le développement des modes alternatifs à la route pour le transport de marchandises. 
 
 Sans préjudice des compétences de l'Autorité de la concurrence, elle assure le suivi de la situation de la concurrence sur
 les marchés des services ferroviaires et dispose à cette fin du droit d'accès aux informations économiques, financières et
@@ -16,7 +16,6 @@ sociales nécessaires que lui reconnaît l'article L. 2135-2.
 	**Cite**:
 
 	  - Loi n°2010-788 du 12 juillet 2010
-	  - Code des transports - art. L2135-2 (VD)
 
 	**Codifié par**:
 
@@ -31,4 +30,4 @@ sociales nécessaires que lui reconnaît l'article L. 2135-2.
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
