--- a/01. PARTIE LEGISLATIVE/Article L2131-4 - 23084531.md
+++ b/01. PARTIE LEGISLATIVE/Article L2131-4 - 23084531.md
@@ -1,17 +1,17 @@
 # Article L2131-4
 
-L'Autorité de régulation des activités ferroviaires veille à ce que l'accès au réseau et aux installations de service, ainsi
-qu'aux différentes prestations associées, soit accordé de manière équitable et non discriminatoire. Elle s'assure que le
-document de référence du réseau mentionné à l'article L. 2122-5 ne contient pas de dispositions discriminatoires et n'octroie
-pas aux gestionnaires d'infrastructure des pouvoirs discrétionnaires pouvant être utilisés à des fins de discrimination à
-l'égard des candidats. 
+L'     Autorité de régulation des activités ferroviaires et routières  veille à ce que l'accès au réseau et aux installations
+de service, ainsi qu'aux différentes prestations associées, soit accordé de manière équitable et non discriminatoire. Elle
+s'assure que le document de référence du réseau mentionné à l'article L. 2122-5 ne contient pas de dispositions
+discriminatoires et n'octroie pas aux gestionnaires d'infrastructure des pouvoirs discrétionnaires pouvant être utilisés à
+des fins de discrimination à l'égard des candidats. 
 
 Elle s'assure également de la cohérence des dispositions économiques, contractuelles et techniques mises en œuvre par les
 gestionnaires d'infrastructure, les exploitants d'installation de service et les entreprises ferroviaires en matière d'accès
 au réseau et aux différentes prestations associées, avec leurs contraintes économiques, financières, juridiques et
-techniques. A ce titre, l'Autorité de régulation des activités ferroviaires prend en considération, dans ses analyses, les
-enjeux et les contraintes du système de transport ferroviaire national, notamment la trajectoire financière du gestionnaire
-du réseau ferré national mentionnée au 3° de l'article L. 2111-10.
+techniques. A ce titre, l'     Autorité de régulation des activités ferroviaires et routières  prend en considération, dans
+ses analyses, les enjeux et les contraintes du système de transport ferroviaire national, notamment la trajectoire financière
+du gestionnaire du réseau ferré national mentionnée au 3° de l'article L. 2111-10.
 
 **Liens relatifs à cet article**
 
@@ -21,7 +21,7 @@ du réseau ferré national mentionnée au 3° de l'article L. 2111-10.
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
@@ -31,4 +31,4 @@ du réseau ferré national mentionnée au 3° de l'article L. 2111-10.
 
 	**Cité par**:
 
-	  - Code des transports - art. L2133-2 (V)
+	  - Code des transports - art. L2133-2 (VD)
