--- a/01. PARTIE LEGISLATIVE/Article L2131-6 - 23084527.md
+++ b/01. PARTIE LEGISLATIVE/Article L2131-6 - 23084527.md
@@ -1,16 +1,24 @@
 # Article L2131-6
 
-A la demande du ministre chargé des transports, l'Autorité de régulation des activités ferroviaires est associée à la
-préparation de la position française dans les négociations ou les actions de coopération internationales dans les domaines du
-transport ferroviaire et participe à la représentation française dans les organisations internationales et communautaires
-compétentes en ce domaine.
+A la demande du ministre chargé des transports, l'     Autorité de régulation des activités ferroviaires et routières  est
+associée à la préparation de la position française dans les négociations ou les actions de coopération internationales dans
+les domaines du transport ferroviaire et participe à la représentation française dans les organisations internationales et
+communautaires compétentes en ce domaine.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 11 (Ab), alinéa 6
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L2132-2 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Liens**:
+
+	  - TRANSFERE: Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
