--- a/01. PARTIE LEGISLATIVE/Article L2131-7 - 23084525.md
+++ b/01. PARTIE LEGISLATIVE/Article L2131-7 - 23084525.md
@@ -1,8 +1,8 @@
 # Article L2131-7
 
-Dans le respect des dispositions législatives et réglementaires, l'Autorité de régulation des activités ferroviaires précise,
-en tant que de besoin, dans le cadre des missions fixées à l'article L. 2131-1 et aux articles L. 2131-3 à L. 2131-6, les
-règles concernant : 
+Dans le respect des dispositions législatives et réglementaires, l'     Autorité de régulation des activités ferroviaires et
+routières  précise, en tant que de besoin, dans le cadre des missions fixées à l'article L. 2131-1 et aux articles L. 2131-3
+à L. 2131-6, les règles concernant : 
 
 1° Les conditions de raccordement au réseau ferroviaire ; 
 
@@ -20,17 +20,25 @@ homologation. Le refus d'homologation doit être motivé. Les règles homologué
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 14 (Ab)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Liens**:
+
+	  - TRANSFERE: Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
 
 	**Cite**:
 
-	  - Code des transports - art. L2122-4 (V)
-	  - Code des transports - art. L2123-1 (V)
-	  - Code des transports - art. L2131-1 (V)
-	  - Code des transports - art. L2131-3 (V)
-	  - Code des transports - art. L2144-1 (V)
+	  - Code des transports - art. L2122-4
+	  - Code des transports - art. L2123-1
+	  - Code des transports - art. L2131-1
+	  - Code des transports - art. L2131-3
+	  - Code des transports - art. L2144-1
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L2132-5 (V)
 
 	**Cité par**:
 
