--- a/01. PARTIE LEGISLATIVE/Article L2131-8 - 30893723.md
+++ b/01. PARTIE LEGISLATIVE/Article L2131-8 - 30893723.md
@@ -1,27 +1,27 @@
 # Article L2131-8
 
-L'Autorité de régulation des activités ferroviaires, l'Etablissement public de sécurité ferroviaire, la commission
-intergouvernementale instituée par le traité entre la République française et le Royaume-Uni de Grande-Bretagne et d'Irlande
-du Nord concernant la construction et l'exploitation par des sociétés privées concessionnaires d'une liaison fixe
+L'Autorité de régulation des activités ferroviaires et routières, l'Etablissement public de sécurité ferroviaire, la
+commission intergouvernementale instituée par le traité entre la République française et le Royaume-Uni de Grande-Bretagne et
+d'Irlande du Nord concernant la construction et l'exploitation par des sociétés privées concessionnaires d'une liaison fixe
 transmanche, signé le 12 février 1986, au titre de ses missions en matière de sécurité ferroviaire, et l'autorité chargée de
 la délivrance de la licence d'entreprise ferroviaire se communiquent, au titre de la coopération qu'ils entretiennent entre
 eux, les informations utiles à l'accomplissement de leurs missions respectives. 
 
 Les dispositions relatives au secret professionnel ne font pas obstacle à la communication à l'Etablissement public de
 sécurité ferroviaire ou à l'autorité responsable de la délivrance des licences, par l'Autorité de régulation des activités
-ferroviaires, des informations recueillies dans l'exercice de ses missions qu'elle estime de nature à prévenir les atteintes
-à la sécurité ferroviaire. 
+ferroviaires et routières , des informations recueillies dans l'exercice de ses missions qu'elle estime de nature à prévenir
+les atteintes à la sécurité ferroviaire. 
 
-L'Autorité de régulation des activités ferroviaires adresse à l'Etablissement public de sécurité ferroviaire, à la commission
-intergouvernementale mentionnée au premier alinéa et à l'autorité chargée de la délivrance de la licence d'entreprise
-ferroviaire, à son initiative ou à la demande de ces derniers, des recommandations sur toute question relative à l'accès au
-réseau ferroviaire et, notamment, sur des éléments susceptibles de nuire à la concurrence sur les marchés des services
-ferroviaires. 
+L'Autorité de régulation des activités ferroviaires et routières adresse à l'Etablissement public de sécurité ferroviaire, à
+la commission intergouvernementale mentionnée au premier alinéa et à l'autorité chargée de la délivrance de la licence
+d'entreprise ferroviaire, à son initiative ou à la demande de ces derniers, des recommandations sur toute question relative à
+l'accès au réseau ferroviaire et, notamment, sur des éléments susceptibles de nuire à la concurrence sur les marchés des
+services ferroviaires. 
 
 Dans un délai maximal, fixé par décret, à compter de la réception des recommandations qui lui sont adressées par
 l'Etablissement public de sécurité ferroviaire ou par la commission intergouvernementale mentionnée au premier alinéa sur les
-questions relatives à la sécurité ferroviaire, l'Autorité de régulation des activités ferroviaires prend une décision qui est
-motivée si elle s'en écarte.
+questions relatives à la sécurité ferroviaire, l'Autorité de régulation des activités ferroviaires et routières prend une
+décision qui est motivée si elle s'en écarte.
 
 **Liens relatifs à cet article**
 
@@ -30,10 +30,14 @@ motivée si elle s'en écarte.
 	  - Décret n°2006-369 du 28 mars 2006 - art. 2-1 (M)
 	  - Code des transports - art. L2221-6-1 (VT)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Liens**:
 
-	  - RECTIFICATION: Loi n°2015-990 du 6 août 2015, v. init.
+	  - TRANSFERE: Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L2132-6 (V)
