--- a/01. PARTIE LEGISLATIVE/Article L2132-11 - 23084490.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-11 - 23084490.md
@@ -1,13 +1,13 @@
 # Article L2132-11
 
-Les membres et agents de l'Autorité de régulation des activités ferroviaires exercent leurs fonctions en toute impartialité,
-sans recevoir d'instruction du Gouvernement ni d'aucune institution, personne, entreprise ou organisme.
+Les membres et agents de l'     Autorité de régulation des activités ferroviaires et routières  exercent leurs fonctions en
+toute impartialité, sans recevoir d'instruction du Gouvernement ni d'aucune institution, personne, entreprise ou organisme. 
 
 Les membres et agents de l'autorité sont tenus au secret professionnel pour les faits, actes et renseignements dont ils ont
-pu avoir connaissance en raison de leurs fonctions.
+pu avoir connaissance en raison de leurs fonctions. 
 
 Le non-respect du secret professionnel établi par une décision de justice entraîne la cessation d'office des fonctions au
-sein de l'Autorité de régulation des activités ferroviaires.
+sein de l'     Autorité de régulation des activités ferroviaires et routières . 
 
 L'obligation de secret professionnel ne fait pas obstacle à la communication par l'autorité des informations ou documents
 qu'elle détient à la Commission européenne ou à une autorité d'un autre Etat membre de l'Union européenne ou à une autorité
@@ -17,10 +17,14 @@ soient astreints aux mêmes obligations de secret professionnel que celles défi
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 20 (Ab)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
