--- a/01. PARTIE LEGISLATIVE/Article L2132-8-1 - 29332682.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-8-1 - 29332682.md
@@ -1,9 +1,9 @@
 # Article L2132-8-1
 
 Avant de rendre ses décisions, avis ou recommandations, à l'exclusion des décisions adoptées dans le cadre des procédures
-prévues aux articles L. 2134-2, L. 2135-7 et L. 2135-8, l'Autorité de régulation des activités ferroviaires consulte le
-Gouvernement, afin d'en connaître les analyses, en particulier en ce qui concerne les enjeux et les contraintes du système de
-transport ferroviaire national.
+prévues aux articles L. 2134-2, L. 2135-7 et L. 2135-8, l'     Autorité de régulation des activités ferroviaires et routières
+consulte le Gouvernement, afin d'en connaître les analyses, en particulier en ce qui concerne les enjeux et les contraintes
+du système de transport ferroviaire national.
 
 **Liens relatifs à cet article**
 
@@ -13,9 +13,17 @@ transport ferroviaire national.
 
 	**Créé par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
 
 	**Cite**:
 
-	  - Code des transports - art. L2134-2 (VD)
-	  - Code des transports - art. L2135-7 (VD)
+	  - Code des transports - art. L2134-2
+	  - Code des transports - art. L2135-7
