--- a/01. PARTIE LEGISLATIVE/Article L2132-8-2 - 29332690.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-8-2 - 29332690.md
@@ -11,7 +11,7 @@ La commission des sanctions mentionnée à l'article L. 2132-1 comprend trois me
 Le président de la commission des sanctions est nommé par décret parmi les membres de la commission. 
 
 Les fonctions de membre de la commission des sanctions ne sont pas rémunérées. Elles sont incompatibles avec celles de membre
-du collège de l'Autorité de régulation des activités ferroviaires. 
+du collège de l'     Autorité de régulation des activités ferroviaires et routières . 
 
 La durée du mandat des membres de la commission des sanctions est de six ans non renouvelable. Elle est décomptée à partir de
 la date de la première réunion de la commission. A l'expiration de la durée de six ans, les membres restent en fonctions
@@ -21,14 +21,22 @@ L'écart entre le nombre de femmes et le nombre d'hommes parmi les membres de la
 supérieur à un. Lors de chaque renouvellement, le membre succédant à une femme est un homme et celui succédant à un homme est
 une femme. 
 
-En cas de vacance d'un siège d'un membre de la commission des sanctions, il est procédé à son remplacement  par une personne
-de même sexe  pour la durée du mandat restant à courir.
+En cas de vacance d'un siège d'un membre de la commission des sanctions, il est procédé à son remplacement par une personne
+de même sexe pour la durée du mandat restant à courir.
 
 **Liens relatifs à cet article**
 
+	**Créé par**:
+
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-948 du 31 juillet 2015 - art. 5
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
 
 	**Cite**:
 
