--- a/01. PARTIE LEGISLATIVE/Article L2133-11 - 29332786.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-11 - 29332786.md
@@ -1,14 +1,18 @@
 # Article L2133-11
 
-La SNCF, SNCF Réseau et SNCF Mobilités informent l'Autorité de régulation des activités ferroviaires de tout projet de
-déclassement de biens situés à proximité de voies ferrées exploitées.
+La SNCF, SNCF Réseau et SNCF Mobilités informent l'Autorité de régulation des activités ferroviaires et routières de tout
+projet de déclassement de biens situés à proximité de voies ferrées exploitées.
 
 **Liens relatifs à cet article**
 
 	**Créé par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
 
 	**Cité par**:
 
 	  - Arrêté du 25 juin 2015 - art. 1 (V)
+
+	**Modifié par**:
+
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
