--- a/01. PARTIE LEGISLATIVE/Article L2133-2 - 23084478.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-2 - 23084478.md
@@ -1,20 +1,20 @@
 # Article L2133-2
 
-L'Autorité de régulation des activités ferroviaires est informée par tout gestionnaire d'infrastructure de son intention de
-négocier des redevances d'infrastructure avec un candidat. Les tarifs négociés sont transmis à l'autorité, qui peut s'y
-opposer s'ils méconnaissent les dispositions du premier alinéa de l'article L. 2131-3 et celles de l'article L. 2131-4.
-L'absence d'opposition dans un délai de deux mois à compter de la réception des tarifs négociés vaut accord.
+L'Autorité de régulation des activités ferroviaires et routières est informée par tout gestionnaire d'infrastructure de son
+intention de négocier des redevances d'infrastructure avec un candidat. Les tarifs négociés sont transmis à l'autorité, qui
+peut s'y opposer s'ils méconnaissent les dispositions du premier alinéa de l'article L. 2131-3 et celles de l'article L.
+2131-4. L'absence d'opposition dans un délai de deux mois à compter de la réception des tarifs négociés vaut accord.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L2131-3
-	  - Code des transports - art. L2131-4 (V)
+	  - Code des transports - art. L2131-3 (VD)
+	  - Code des transports - art. L2131-4 (VD)
 
 	**Codifié par**:
 
