--- a/01. PARTIE LEGISLATIVE/Article L2133-3 - 23084476.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-3 - 23084476.md
@@ -1,14 +1,14 @@
 # Article L2133-3
 
-L'Autorité de régulation des activités ferroviaires autorise l'entrée en vigueur des accords-cadres prévus à l'article L.
-2122-7. A la demande des parties, elle émet un avis sur les accords-cadres prévus à l'article L. 2122-6, notamment sur leur
-volet tarifaire.
+L'Autorité de régulation des activités ferroviaires et routières autorise l'entrée en vigueur des accords-cadres prévus à
+l'article L. 2122-7. A la demande des parties, elle émet un avis sur les accords-cadres prévus à l'article L. 2122-6,
+notamment sur leur volet tarifaire.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 15 (Ab), alinéa 4, paragraphe III
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cité par**:
 
@@ -17,8 +17,8 @@ volet tarifaire.
 
 	**Cite**:
 
-	  - Code des transports - art. L2122-6 (V)
-	  - Code des transports - art. L2122-7 (V)
+	  - Code des transports - art. L2122-6
+	  - Code des transports - art. L2122-7
 
 	**Codifié par**:
 
