--- a/01. PARTIE LEGISLATIVE/Article L2133-6 - 23084470.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-6 - 23084470.md
@@ -1,8 +1,8 @@
 # Article L2133-6
 
-L'Autorité de régulation des activités ferroviaires émet un avis motivé sur le document de référence du réseau dans un délai
-de deux mois suivant sa publication. Les modifications qui, au vu de cet avis, sont nécessaires pour rendre les dispositions
-conformes à la réglementation sont apportées sans nouvelle consultation des parties intéressées.
+L'Autorité de régulation des activités ferroviaires et routières émet un avis motivé sur le document de référence du réseau
+dans un délai de deux mois suivant sa publication. Les modifications qui, au vu de cet avis, sont nécessaires pour rendre les
+dispositions conformes à la réglementation sont apportées sans nouvelle consultation des parties intéressées.
 
 **Liens relatifs à cet article**
 
@@ -10,9 +10,9 @@ conformes à la réglementation sont apportées sans nouvelle consultation des p
 
 	  - Décret n°2003-194 du 7 mars 2003 - art. 35 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 15 (Ab), alinéa 8, paragraphe VI
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Codifié par**:
 
