--- a/01. PARTIE LEGISLATIVE/Article L2133-7 - 23084468.md
+++ b/01. PARTIE LEGISLATIVE/Article L2133-7 - 23084468.md
@@ -1,20 +1,20 @@
 # Article L2133-7
 
-A la demande de l'autorité administrative compétente, l'Autorité de régulation des activités ferroviaires émet un avis sur
-les tarifs des services de transport de voyageurs réalisés à titre exclusif par une entreprise ferroviaire à laquelle
-l'exploitation est confiée sans mise en concurrence préalable. Elle veille au respect, à ce titre, des tarifs sociaux
-nationaux et des articles L. 1112-1 à L. 1112-10. Les modalités d'application du présent article sont fixées par décret en
-Conseil d'Etat.
+A la demande de l'autorité administrative compétente, l'Autorité de régulation des activités ferroviaires et routières émet
+un avis sur les tarifs des services de transport de voyageurs réalisés à titre exclusif par une entreprise ferroviaire à
+laquelle l'exploitation est confiée sans mise en concurrence préalable. Elle veille au respect, à ce titre, des tarifs
+sociaux nationaux et des articles L. 1112-1 à L. 1112-10. Les modalités d'application du présent article sont fixées par
+décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 15 (Ab), alinéa 9, paragraphe VII
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L1112-1 (V)
+	  - Code des transports - art. L1112-1
 
 	**Codifié par**:
 
