--- a/01. PARTIE LEGISLATIVE/Article L2134-1 - 23084460.md
+++ b/01. PARTIE LEGISLATIVE/Article L2134-1 - 23084460.md
@@ -2,23 +2,23 @@
 
 Toute personne s'estimant victime de la part de l'Etablissement public de sécurité ferroviaire d'un traitement inéquitable,
 d'une discrimination ou de toute autre pratique ayant pour effet de restreindre abusivement l'accès au réseau ferroviaire, y
-compris les installations de service, peut, dans les délais de recours contentieux, saisir pour avis l'Autorité de régulation
-des activités ferroviaires. L'autorité ainsi saisie en informe sans délai l'Etablissement public de sécurité ferroviaire, qui
-lui fournit les informations utiles à l'instruction de la saisine. Elle dispose d'un délai maximum de deux mois à compter de
-la réception de la saisine pour formuler son avis, qu'elle peut publier. Le directeur général de l'Etablissement public de
-sécurité ferroviaire prend, au vu de cet avis, toute mesure qu'il juge nécessaire. Il notifie sa décision à l'auteur de la
-saisine et à l'autorité.
+compris les installations de service, peut, dans les délais de recours contentieux, saisir pour avis l'     Autorité de
+régulation des activités ferroviaires et routières . L'autorité ainsi saisie en informe sans délai l'Etablissement public de
+sécurité ferroviaire, qui lui fournit les informations utiles à l'instruction de la saisine. Elle dispose d'un délai maximum
+de deux mois à compter de la réception de la saisine pour formuler son avis, qu'elle peut publier. Le directeur général de
+l'Etablissement public de sécurité ferroviaire prend, au vu de cet avis, toute mesure qu'il juge nécessaire. Il notifie sa
+décision à l'auteur de la saisine et à l'autorité. 
 
 La saisine de l'autorité suspend les délais de recours à l'encontre de la décision de l'Etablissement public de sécurité
-ferroviaire. Ces délais recommencent à courir à compter de la notification au demandeur de l'avis de l'Autorité de régulation
-des activités ferroviaires. L'Autorité de régulation des activités ferroviaires ne peut intervenir au titre du présent
-article lorsqu'une procédure est engagée devant une juridiction.
+ferroviaire. Ces délais recommencent à courir à compter de la notification au demandeur de l'avis de l'     Autorité de
+régulation des activités ferroviaires et routières . L'     Autorité de régulation des activités ferroviaires et routières
+ne peut intervenir au titre du présent article lorsqu'une procédure est engagée devant une juridiction.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Cité par**:
 
