--- a/01. PARTIE LEGISLATIVE/Article L2134-3 - 23084456.md
+++ b/01. PARTIE LEGISLATIVE/Article L2134-3 - 23084456.md
@@ -1,16 +1,18 @@
 # Article L2134-3
 
-I.-L'Autorité de régulation des activités ferroviaires examine toutes les demandes formulées au titre de l'article L. 2134-2.
-Elle engage l'instruction de chaque demande dans un délai d'un mois à compter de sa réception. Elle sollicite toutes
-informations utiles à l'instruction et procède aux consultations des parties concernées. Elle se prononce dans un délai
-maximal de six semaines à compter de la réception de l'ensemble des informations utiles à l'instruction de la demande. 
+I.-L'     Autorité de régulation des activités ferroviaires et routières  examine toutes les demandes formulées au titre de
+l'article L. 2134-2. Elle engage l'instruction de chaque demande dans un délai d'un mois à compter de sa réception. Elle
+sollicite toutes informations utiles à l'instruction et procède aux consultations des parties concernées. Elle se prononce
+dans un délai maximal de six semaines à compter de la réception de l'ensemble des informations utiles à l'instruction de la
+demande. 
 
-II.-Les décisions prises par l'Autorité de régulation des activités ferroviaires au titre de l'article L. 2134-2 sont
-susceptibles de recours en annulation ou en réformation dans un délai d'un mois à compter de leur notification. Un recours
-incident peut être formé alors même que son auteur serait forclos pour agir à titre principal. Ces recours relèvent de la
-compétence de la cour d'appel de Paris et ne sont pas suspensifs. Toutefois, le sursis à exécution de la décision peut être
-ordonné par le juge, si celle-ci est susceptible d'entraîner des conséquences irréparables ou manifestement excessives ou
-s'il est survenu, postérieurement à sa notification, des faits nouveaux d'une exceptionnelle gravité. 
+II.-Les décisions prises par l'     Autorité de régulation des activités ferroviaires et routières  au titre de l'article L.
+2134-2 sont susceptibles de recours en annulation ou en réformation dans un délai d'un mois à compter de leur notification.
+Un recours incident peut être formé alors même que son auteur serait forclos pour agir à titre principal. Ces recours
+relèvent de la compétence de la cour d'appel de Paris et ne sont pas suspensifs. Toutefois, le sursis à exécution de la
+décision peut être ordonné par le juge, si celle-ci est susceptible d'entraîner des conséquences irréparables ou
+manifestement excessives ou s'il est survenu, postérieurement à sa notification, des faits nouveaux d'une exceptionnelle
+gravité. 
 
 Le pourvoi en cassation formé contre l'arrêt de la cour d'appel est exercé dans le délai d'un mois suivant la notification ou
 la signification de cet arrêt.
@@ -23,8 +25,13 @@ la signification de cet arrêt.
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-855 du 15 juillet 2015 - art. 7
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
 
 	**Cite**:
 
-	  - Code des transports - art. L2134-2 (VD)
+	  - Code des transports - art. L2134-2 (Ab)
