--- a/01. PARTIE LEGISLATIVE/Article L2135-14 - 23084401.md
+++ b/01. PARTIE LEGISLATIVE/Article L2135-14 - 23084401.md
@@ -1,17 +1,22 @@
 # Article L2135-14
 
-L'Autorité de régulation des activités ferroviaires peut être consultée par les juridictions sur les pratiques relevées dans
-les affaires dont elles sont saisies et entrant dans le champ de compétence de l'autorité, ainsi que sur des affaires dont
-cette dernière a eu à connaître. Le cours de la prescription est suspendu par la consultation de l'autorité.
+L'     Autorité de régulation des activités ferroviaires et routières  peut être consultée par les juridictions sur les
+pratiques relevées dans les affaires dont elles sont saisies et entrant dans le champ de compétence de l'autorité, ainsi que
+sur des affaires dont cette dernière a eu à connaître. Le cours de la prescription est suspendu par la consultation de
+l'autorité. 
 
 Les juridictions adressent à l'autorité copie du jugement portant sur les affaires pour lesquelles elles l'ont consultée.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 28 (Ab), alinéas 1 et 2, paragraphe I
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
