--- a/01. PARTIE LEGISLATIVE/Article L2135-4 - 23084437.md
+++ b/01. PARTIE LEGISLATIVE/Article L2135-4 - 23084437.md
@@ -1,11 +1,12 @@
 # Article L2135-4
 
 En dehors des cas prévus à l'article L. 2135-3, ou lorsque cet accès leur est refusé, les agents habilités ne peuvent
-procéder aux visites en tous lieux, ainsi qu'à la saisie de pièces et de documents, dans le cadre d'enquêtes demandées par
-l'Autorité de régulation des activités ferroviaires, que sur autorisation judiciaire donnée par ordonnance du juge des
-libertés et de la détention du tribunal de grande instance dans le ressort duquel sont situés les locaux à visiter. Le
-ministère d'avocat n'est alors pas obligatoire. Lorsque ces locaux sont situés dans le ressort de plusieurs juridictions et
-qu'une action simultanée doit être menée dans chacun d'eux, la requête peut être portée auprès de l'une de ces juridictions. 
+procéder aux visites en tous lieux, ainsi qu'à la saisie de pièces et de documents, dans le cadre d'enquêtes demandées par l'
+Autorité de régulation des activités ferroviaires et routières , que sur autorisation judiciaire donnée par ordonnance du
+juge des libertés et de la détention du tribunal de grande instance dans le ressort duquel sont situés les locaux à visiter.
+Le ministère d'avocat n'est alors pas obligatoire. Lorsque ces locaux sont situés dans le ressort de plusieurs juridictions
+et qu'une action simultanée doit être menée dans chacun d'eux, la requête peut être portée auprès de l'une de ces
+juridictions. 
 
 Le juge vérifie que la demande d'autorisation qui lui est soumise est fondée ; cette demande doit comporter tous les éléments
 d'information de nature à justifier la visite. 
@@ -18,17 +19,17 @@ visite.
 
 Le juge peut, s'il l'estime utile, se rendre dans les locaux pendant l'intervention. 
 
-Il peut, à tout moment, décider la suspension ou l'arrêt de la visite.
+Il peut, à tout moment, décider la suspension ou l'arrêt de la visite. 
 
-L'ordonnance mentionnée au premier alinéa est exécutoire au seul vu de la minute.
+L'ordonnance mentionnée au premier alinéa est exécutoire au seul vu de la minute. 
 
 L'ordonnance est notifiée verbalement et sur place au moment de la visite à l'occupant des lieux ou à son représentant qui en
 reçoit copie intégrale contre récépissé ou émargement au procès-verbal prévu à l'article L. 2135-6. En l'absence de
 l'occupant des lieux ou de son représentant, l'ordonnance est notifiée, après la visite, par lettre recommandée avec demande
-d'avis de réception. La notification est réputée faite à la date de réception figurant sur l'avis.
+d'avis de réception. La notification est réputée faite à la date de réception figurant sur l'avis. 
 
 A défaut de réception, il est procédé à la signification de l'ordonnance par acte d'huissier de justice. Le délai et la voie
-de recours sont mentionnés dans l'ordonnance.
+de recours sont mentionnés dans l'ordonnance. 
 
 L'ordonnance peut faire l'objet d'un appel devant le premier président de la cour d'appel. Les parties ne sont pas tenues de
 constituer avoué. 
@@ -38,25 +39,30 @@ adressée, par pli recommandé ou par voie électronique, au greffe de la cour d
 compter soit de la remise, soit de la réception, soit de la signification de l'ordonnance. L'appel n'est pas suspensif. 
 
 Le greffe du tribunal de grande instance transmet sans délai le dossier de l'affaire au greffe de la cour d'appel où les
-parties peuvent le consulter.
+parties peuvent le consulter. 
 
 L'ordonnance du premier président de la cour d'appel est susceptible d'un pourvoi en cassation, selon les règles prévues par
 le code de procédure civile. Le délai du pourvoi en cassation est de quinze jours.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 23 (Ab), alinéas 1 à 12, paragraphe I
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
 
 	**Cité par**:
 
 	  - Code des transports - art. L2135-1 (V)
+	  - Code des transports - art. L2135-9 (Ab)
 
 	**Cite**:
 
-	  - Code des transports - art. L2135-3 (V)
-	  - Code des transports - art. L2135-6 (V)
+	  - Code des transports - art. L2135-3 (Ab)
+	  - Code des transports - art. L2135-6
 
 	**Codifié par**:
 
