--- a/01. PARTIE LEGISLATIVE/Article L2135-5 - 23084435.md
+++ b/01. PARTIE LEGISLATIVE/Article L2135-5 - 23084435.md
@@ -2,17 +2,26 @@
 
 La visite, qui ne peut commencer avant six heures ou après vingt et une heures, est effectuée en présence de l'occupant des
 lieux ou de son représentant. En cas d'impossibilité, l'officier de police judiciaire requiert deux témoins choisis en dehors
-des personnes relevant de son autorité ou de celle de l'Autorité de régulation des activités ferroviaires.
+des personnes relevant de son autorité ou de celle de l'     Autorité de régulation des activités ferroviaires et
+routières . 
 
 Les enquêteurs, l'occupant des lieux ou son représentant ainsi que l'officier de police judiciaire peuvent seuls prendre
 connaissance des pièces et documents avant leur saisie.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 23 (Ab), alinéas 13 et 14, paragraphe II
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
+
+	**Cité par**:
+
+	  - Code des transports - art. L2135-6 (Ab)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 2
