--- a/01. PARTIE LEGISLATIVE/Article L2251-1-1 - 29333823.md
+++ b/01. PARTIE LEGISLATIVE/Article L2251-1-1 - 29333823.md
@@ -2,14 +2,15 @@
 
 Le service interne de sécurité de la SNCF réalise cette mission au profit de SNCF Réseau, de SNCF Mobilités et de l'ensemble
 des autres entreprises ferroviaires utilisatrices du réseau ferré national ainsi que de leurs personnels, à leur demande et
-dans un cadre formalisé.
+dans un cadre formalisé. 
 
 Cette mission s'exerce dans les emprises immobilières nécessaires à l'exploitation des services de transport ferroviaire de
-personnes et de marchandises et dans les véhicules de transport public de personnes qui y sont affectés.
+personnes et de marchandises et dans les véhicules de transport public de personnes qui y sont affectés. 
 
-La SNCF publie chaque année un document de référence et de tarification des prestations de sûreté. L'Autorité de régulation
-des activités ferroviaires émet un avis conforme sur la tarification de ces prestations. L'exécution de ces prestations
-s'effectue dans des conditions transparentes, équitables et sans discrimination entre les entreprises ferroviaires.
+La SNCF publie chaque année un document de référence et de tarification des prestations de sûreté. L'     Autorité de
+régulation des activités ferroviaires et routières  émet un avis conforme sur la tarification de ces prestations. L'exécution
+de ces prestations s'effectue dans des conditions transparentes, équitables et sans discrimination entre les entreprises
+ferroviaires. 
 
 Les conditions d'application du présent article sont définies par décret en Conseil d'Etat.
 
@@ -21,6 +22,6 @@ Les conditions d'application du présent article sont définies par décret en C
 	  - Décret n°2015-845 du 10 juillet 2015 - art. 5 (V)
 	  - Code des transports - art. L2241-1 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 23
+	  - Loi n°2015-990 du 6 août 2015 - art. 1 (V)
